# terrars-digitalocean-digitalocean

./: Cargo.toml  readme.md  terrars.json
src/: lib.rs
src/digitalocean/: app.rs  cdn.rs  certificate.rs  container_registry.rs  container_registry_docker_credentials.rs  custom_image.rs  data_account.rs  data_app.rs  data_certificate.rs  data_container_registry.rs  data_database_ca.rs  data_database_cluster.rs  data_database_connection_pool.rs  data_database_replica.rs  data_database_user.rs  data_domain.rs  data_domains.rs  data_droplet.rs  data_droplet_snapshot.rs  data_droplets.rs  data_firewall.rs  data_floating_ip.rs  data_image.rs  data_images.rs  data_kubernetes_cluster.rs  data_kubernetes_versions.rs  data_loadbalancer.rs  data_project.rs  data_projects.rs  data_record.rs  data_records.rs  data_region.rs  data_regions.rs  data_reserved_ip.rs  data_sizes.rs  data_spaces_bucket.rs  data_spaces_bucket_object.rs  data_spaces_bucket_objects.rs  data_spaces_buckets.rs  data_ssh_key.rs  (+44 more)
