[package]
name = "terrars-digitalocean-digitalocean"
edition = "2021"
version = "0.1.9"
description = "Pre-generated Terrars Digitalocean bindings"
readme = "readme.md"
license = "ISC"
repository = "https://github.com/andrewbaxter/terrars-digitalocean-digitalocean"

[dependencies]
serde = "1.0.151"
serde_json = "1.0.91"
terrars = "0.1.12"

[features]
app = []
cdn = []
certificate = []
container_registry = []
container_registry_docker_credentials = []
custom_image = []
data_account = []
data_app = []
data_certificate = []
data_container_registry = []
data_database_ca = []
data_database_cluster = []
data_database_connection_pool = []
data_database_replica = []
data_database_user = []
data_domain = []
data_domains = []
data_droplet = []
data_droplet_snapshot = []
data_droplets = []
data_firewall = []
data_floating_ip = []
data_image = []
data_images = []
data_kubernetes_cluster = []
data_kubernetes_versions = []
data_loadbalancer = []
data_project = []
data_projects = []
data_record = []
data_records = []
data_region = []
data_regions = []
data_reserved_ip = []
data_sizes = []
data_spaces_bucket = []
data_spaces_bucket_object = []
data_spaces_bucket_objects = []
data_spaces_buckets = []
data_ssh_key = []
data_ssh_keys = []
data_tag = []
data_tags = []
data_volume = []
data_volume_snapshot = []
data_vpc = []
database_cluster = []
database_connection_pool = []
database_db = []
database_firewall = []
database_kafka_topic = []
database_mysql_config = []
database_redis_config = []
database_replica = []
database_user = []
domain = []
droplet = []
droplet_snapshot = []
firewall = []
floating_ip = []
floating_ip_assignment = []
kubernetes_cluster = []
kubernetes_node_pool = []
loadbalancer = []
monitor_alert = []
project = []
project_resources = []
record = []
reserved_ip = []
reserved_ip_assignment = []
spaces_bucket = []
spaces_bucket_cors_configuration = []
spaces_bucket_object = []
spaces_bucket_policy = []
ssh_key = []
tag = []
uptime_alert = []
uptime_check = []
volume = []
volume_attachment = []
volume_snapshot = []
vpc = []
